UIMA-1459 Fixed inefficient Integer conversion
git-svn-id: https://svn.apache.org/repos/asf/incubator/uima/sandbox/trunk@798149 13f79535-47bb-0310-9956-ffa450edef68